fix footer z-index issue

--- a/front-end/src/components/Footer/Footer.module.css
+++ b/front-end/src/components/Footer/Footer.module.css
@@ -3,6 +3,7 @@
     background-color: rgb(222, 222, 236);
     display: flex;
     flex-direction: column;
+    z-index: 1;
 }
 
 .InfoBox {
@@ -23,10 +24,12 @@
 
 .Link {
     color: inherit;
+    z-index: 1;
 }
 
 .Icon {
     opacity: .8;
+    z-index: 1;
 }
 
 .Icon:hover {
